RESOLVED FIXED20402
Debugger not detached when the Inspector window closes
https://bugs.webkit.org/show_bug.cgi?id=20402
Summary Debugger not detached when the Inspector window closes
Timothy Hatcher
Reported 2008-08-15 10:58:34 PDT
The debugger should be detached when the Inspector window closes, but it is not. This leads to unexpected slowdowns and a broken Scripts panel interface when the Inspector opened again (since the scripts are cleared.)
Attachments
Proposed patch (2.06 KB, patch)
2008-08-15 11:04 PDT, Timothy Hatcher
aroben: review+
Timothy Hatcher
Comment 1 2008-08-15 11:04:35 PDT
Created attachment 22821 [details] Proposed patch
Adam Roben (:aroben)
Comment 2 2008-08-15 11:31:53 PDT
Comment on attachment 22821 [details] Proposed patch r=me
Timothy Hatcher
Comment 3 2008-08-15 11:35:58 PDT
Landed in r35798.
Note You need to log in before you can comment on or make changes to this bug.