        Detach the script debugger when the Web Inspector's window closes.         This has always been the intended design, but never fully implemented.

https://bugs.webkit.org/show_bug.cgi?id=20402

        Reviewed by Adam Roben.

        * page/InspectorController.cpp:
        (WebCore::InspectorController::setWindowVisible): Call stopDebugging()
        if the window is no longer visible.

Canonical link: https://commits.webkit.org/28206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35798 268f45cc-cd09-0410-ab3c-d52691b4dbfc